--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+infra = { path = "../infra" }
+domain = { path = "../domain" }
+
+derive_more = "2.1.0"
