--- a/crates/domain/Cargo.toml
+++ b/crates/domain/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2024"
 [dependencies]
 nutype = { workspace = true }
 derive_more = { version = "2.1.0", features = ["from"] }
+bon = { version = "3.8.1", features = [
+  "experimental-overwritable",
+  "experimental-getter",
+  "implied-bounds",
+] }
