--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -4,11 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-app = { path = "../app" }
+service = { path = "../service" }
 serde = { version = "1.0.228", features = ["derive"] }
 derive_more = "2.1.0"
 tracing = "0.1.44"
 
 axum = "0.8.8"
-maud = { version = "0.26.0", features = ["axum"] }
-tower-http = { version = "0.5.2", features = ["fs"] }
