--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ default-run = "eran_codes"
 members = [
     "crates/domain",
     "crates/infra",
-    "crates/service",
+    "crates/app",
     "crates/http",
     "crates/utils",
 ]
@@ -17,7 +17,7 @@ members = [
 [dependencies]
 infra = { path = "crates/infra" }
 domain = { path = "crates/domain" }
-service = { path = "crates/service" }
+app = { path = "crates/app" }
 http = { path = "crates/http" }
 utils = { path = "crates/utils" }
 
