--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-service = { path = "../service" }
+app = { path = "../app" }
 serde = { version = "1.0.228", features = ["derive"] }
 derive_more = "2.1.0"
 tracing = "0.1.44"
