--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "crates/infra",
     "crates/app",
     "crates/http",
+    "crates/maud_extensions_macros",
     "crates/utils",
 ]
 
