--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ nutype = "0.6.2"
 migrate = "cargo with-db sqlx migrate run --source crates/infra/migrations"
 prepare = "cargo with-db sqlx prepare --workspace -- --all-targets"
 b = "bacon run ."
+w = "cargo watch -c -q -x 'run'"
