renamed maud_extensions_macro to maud_extensions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "crates/infra",
     "crates/app",
     "crates/http",
-    "crates/maud_extensions_macros",
+    "crates/maud_extensions",
     "crates/utils",
 ]
 
