--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -12,4 +12,4 @@ tracing = "0.1.44"
 axum = "0.8.8"
 maud = { version = "0.27.0", features = ["axum"] }
 tower-http = { version = "0.6.8", features = ["fs"] }
-maud_extensions_macros = { path = "../maud_extensions_macros" }
+maud_extensions = { path = "../maud_extensions" }
