--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -13,3 +13,5 @@ axum = "0.8.8"
 maud = { version = "0.27.0", features = ["axum"] }
 tower-http = { version = "0.6.8", features = ["fs"] }
 maud_extensions = { path = "../maud_extensions" }
+
+tower-livereload = "0.10.1"
