--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ derive_more = "2.1.0"
 nutype = "0.6.2"
 
 [workspace.metadata.scripts]
+crs = "cargo run-script"
 migrate = "cargo with-db sqlx migrate run --source crates/infra/migrations"
 prepare = "cargo with-db sqlx prepare --workspace -- --all-targets"
-b = "bacon run ."
 w = "watchexec --restart --exts rs,html,css,js -- cargo run"
