--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -12,7 +12,7 @@ tracing = "0.1.44"
 axum = "0.8.8"
 maud = { version = "0.27.0", features = ["axum"] }
 tower-http = { version = "0.6.8", features = ["fs"] }
-maud_exts = { path = "../../../maud-exts", package = "maud-exts" }
+maud_extensions = { path = "../../../maud-extensions", package = "maud-extensions" }
 
 jiff = "0.2.17"
 tower-livereload = { version = "0.10.1", optional = true }
