--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -18,7 +18,10 @@ jiff = "0.2.17"
 tower-livereload = { version = "0.10.1", optional = true }
 datastar = { version = "0.3.1", features = ["axum"] }
 async-stream = "0.3.6"
-tokio = { version = "1", features = ["time"] }
+tokio = { version = "1", features = ["sync", "time"] }
+dashmap = "6.1.0"
+uuid = { version = "1.12.1", features = ["v4"] }
+tower-cookies = "0.10.0"
 
 [features]
 live-reload = ["tower-livereload"]
