--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1", features = ["sync", "time"] }
 dashmap = "6.1.0"
 uuid = { version = "1.12.1", features = ["v4"] }
 tower-cookies = "0.10.0"
+moddef = { workspace = true }
 
 [features]
 live-reload = ["tower-livereload"]
