--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { version = "1", features = [
 axum = { version = "0.8.8" }
 
 derive_more = "2.1.0"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [workspace.dependencies]
 nutype = "0.6.2"
