--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -11,7 +11,7 @@ tracing = "0.1.44"
 
 axum = "0.8.8"
 maud = { version = "0.27.0", features = ["axum"] }
-tower-http = { version = "0.6.8", features = ["fs"] }
+tower-http = { version = "0.6.8", features = ["fs", "request-id", "trace"] }
 maud-extensions = "0.1.2"
 
 jiff = "0.2.17"
@@ -23,6 +23,7 @@ dashmap = "6.1.0"
 uuid = { version = "1.12.1", features = ["v4"] }
 tower-cookies = "0.10.0"
 moddef = { workspace = true }
+tower = "0.5.2"
 
 [features]
 live-reload = ["tower-livereload"]
