adjust startup logging

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [env]
-RUST_LOG = "info,sqlx=warn,tower_http=info"
+RUST_LOG = "info,sqlx=warn,tower_http=info,eran_codes=debug"
 DATABASE_URL = "postgres://app:app@localhost:5432/app"
 HOST = "localhost"
 PORT = "3002"
