--- a/crates/infra/Cargo.toml
+++ b/crates/infra/Cargo.toml
@@ -15,3 +15,4 @@ sqlx = { version = "0.8.6", features = [
 ] }
 utils = { path = "../utils" }
 reqwest = { version = "0.13.1", features = ["json"] }
+tracing = "0.1.44"
