--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -28,6 +28,7 @@ tower-cookies = "0.11.0"
 moddef = { workspace = true }
 tower = "0.5.2"
 serde_json = "1.0.140"
+tokio-util = "0.7.13"
 
 [features]
 live-reload = ["tower-livereload"]
