--- a/crates/domain/Cargo.toml
+++ b/crates/domain/Cargo.toml
@@ -12,3 +12,4 @@ bon = { version = "3.8.1", features = [
   "implied-bounds",
 ] }
 moddef = { workspace = true }
+uuid = { version = "1.12.1", features = ["v4"] }
