--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ tokio = { version = "1", features = [
     "fs",
 ] }
 axum = { version = "0.8.8" }
+tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
+tower-sessions = "0.14.0"
+tower-cookies = "0.11.0"
 
 derive_more = "2.1.0"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
