--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -9,7 +9,8 @@ serde = { version = "1.0.228", features = ["derive"] }
 derive_more = "2.1.1"
 tracing = "0.1.44"
 axum-login = "0.18.0"
-tower-sessions = { version = "0.14.0", features = ["memory-store", "private"] }
+tower-sessions = { version = "0.14.0", features = ["private"] }
+time = "0.3.44"
 
 axum = "0.8.8"
 maud = { version = "0.27.0", features = ["axum"] }
@@ -24,7 +25,7 @@ async-stream = "0.3.6"
 tokio = { version = "1", features = ["sync", "time"] }
 dashmap = "6.1.0"
 uuid = { version = "1.12.1", features = ["v4"] }
-tower-cookies = "0.11.0"
+tower-cookies = { version = "0.11.0", features = ["signed"] }
 moddef = { workspace = true }
 tower = "0.5.2"
 serde_json = "1.0.140"
