--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -31,5 +31,10 @@ tower = "0.5.2"
 serde_json = "1.0.140"
 tokio-util = "0.7.13"
 
+[dev-dependencies]
+async-trait = "0.1.86"
+tower-sessions = { version = "0.14.0", features = ["memory-store"] }
+domain = { path = "../domain" }
+
 [features]
 live-reload = ["tower-livereload"]
