--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -8,6 +8,7 @@ app = { path = "../app" }
 serde = { version = "1.0.228", features = ["derive"] }
 derive_more = "2.1.1"
 tracing = "0.1.44"
+tracing-subscriber = "0.3.19"
 axum-login = "0.18.0"
 tower-sessions = { version = "0.14.0", features = ["private"] }
 time = "0.3.44"
