--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -31,6 +31,7 @@ moddef = { workspace = true }
 tower = "0.5.2"
 serde_json = "1.0.140"
 tokio-util = "0.7.13"
+bon = "3.8.2"
 
 [dev-dependencies]
 async-trait = "0.1.86"
