--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -10,6 +10,7 @@ derive_more = "2.1.0"
 tracing = "0.1.44"
 async-trait = "0.1.86"
 secrecy = "0.10.3"
+bon = "3.8.2"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
