--- a/crates/infra/Cargo.toml
+++ b/crates/infra/Cargo.toml
@@ -23,3 +23,4 @@ password-hash = "0.5.0"
 rand_core = "0.6.4"
 async-trait = "0.1.86"
 uuid = { version = "1.12.1", features = ["v4"] }
+bon = "3.8.2"
