--- a/crates/infra/Cargo.toml
+++ b/crates/infra/Cargo.toml
@@ -24,3 +24,4 @@ rand_core = "0.6.4"
 async-trait = "0.1.86"
 uuid = { version = "1.12.1", features = ["v4"] }
 bon = "3.8.2"
+serde_json = "1.0.139"
