--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -11,6 +11,7 @@ tracing = "0.1.44"
 async-trait = "0.1.86"
 secrecy = "0.10.3"
 bon = "3.8.2"
+uuid = "1.12.1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
