--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -33,6 +33,7 @@ tower = "0.5.2"
 serde_json = "1.0.140"
 tokio-util = "0.7.13"
 bon = "3.8.2"
+urlencoding = "2.1.3"
 
 [dev-dependencies]
 async-trait = "0.1.86"
