--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,3 +11,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: stringy checks
         run: scripts/ci/stringy-check.sh
+      - name: no String fields
+        run: scripts/ci/no-string-fields.sh
