--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -34,6 +34,9 @@ serde_json = "1.0.140"
 tokio-util = "0.7.13"
 bon = "3.8.2"
 urlencoding = "2.1.3"
+nutype = { workspace = true, features = ["serde"] }
+strum = { workspace = true }
+strum_macros = { workspace = true }
 
 [dev-dependencies]
 async-trait = "0.1.86"
