--- a/crates/http/Cargo.toml
+++ b/crates/http/Cargo.toml
@@ -9,10 +9,10 @@ domain = { path = "../domain" }
 serde = { version = "1.0.228", features = ["derive"] }
 derive_more = "2.1.1"
 tracing = "0.1.44"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = "0.3.22"
 axum-login = "0.18.0"
 tower-sessions = { version = "0.14.0", features = ["private"] }
-time = "0.3.44"
+time = "0.3.47"
 
 axum = "0.8.8"
 maud = { version = "0.27.0", features = ["axum"] }
@@ -20,26 +20,30 @@ tower-http = { version = "0.6.8", features = ["fs", "request-id", "trace"] }
 maud-extensions = "0.1.2"
 secrecy = "0.10.3"
 
-jiff = "0.2.17"
-tower-livereload = { version = "0.10.1", optional = true }
+jiff = "0.2.19"
+tower-livereload = { version = "0.10.2", optional = true }
 datastar = { version = "0.3.1", features = ["axum"] }
 async-stream = "0.3.6"
 tokio = { version = "1", features = ["sync", "time"] }
 dashmap = "6.1.0"
-uuid = { version = "1.12.1", features = ["v4"] }
+uuid = { version = "1.20.0", features = ["v4"] }
 tower-cookies = { version = "0.11.0", features = ["signed"] }
 moddef = { workspace = true }
-tower = "0.5.2"
-serde_json = "1.0.140"
-tokio-util = "0.7.13"
-bon = "3.8.2"
+tower = "0.5.3"
+serde_json = "1.0.149"
+tokio-util = "0.7.18"
+bon = { version = "3.8.2", features = [
+  "experimental-getter",
+  "experimental-overwritable",
+  "implied-bounds",
+] }
 urlencoding = "2.1.3"
 nutype = { workspace = true, features = ["serde"] }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 
 [dev-dependencies]
-async-trait = "0.1.86"
+async-trait = "0.1.89"
 tower-sessions = { version = "0.14.0", features = ["memory-store"] }
 domain = { path = "../domain" }
 
