--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,6 @@ crs = "cargo run-script"
 migrate = "cargo with-db sqlx migrate run --source crates/infra/migrations"
 prepare = "cargo with-db sqlx prepare --workspace -- --all-targets"
 w = "watchexec --restart --exts rs,html,css,js -- cargo run --features http/live-reload"
+
+[patch.crates-io]
+serde = { path = "crates/vendor/serde" }
