--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,7 @@ default-run = "eran_codes"
 
 [workspace]
 
-members = [
-    "crates/domain",
-    "crates/infra",
-    "crates/app",
-    "crates/http",
-    "crates/utils",
-]
+members = ["crates/domain", "crates/infra", "crates/app", "crates/http", "crates/utils"]
 
 [dependencies]
 infra = { path = "crates/infra" }
@@ -49,6 +43,3 @@ crs = "cargo run-script"
 migrate = "cargo with-db sqlx migrate run --source crates/infra/migrations"
 prepare = "cargo with-db sqlx prepare --workspace -- --all-targets"
 w = "watchexec --restart --exts rs,html,css,js -- cargo run --features http/live-reload"
-
-[patch.crates-io]
-serde = { path = "crates/vendor/serde" }
